chore: update metainfo

--- a/data/io.github.josephmawa.EncodingExplorer.metainfo.xml.in
+++ b/data/io.github.josephmawa.EncodingExplorer.metainfo.xml.in
@@ -5,9 +5,17 @@
   <project_license>GPL-3.0-or-later</project_license>
 
   <name>Encoding Explorer</name>
-  <summary>Keep the summary shorter, between 10 and 35 characters</summary>
+  <summary>Transform characters into binary</summary>
   <description>
-    <p>No description</p>
+    <p>Encoding Explorer is a tool for learning character encoding. Below are the main features.</p>
+    <ul>
+      <li>Encode characters to ASCII, UTF-8, UTF-16, and UTF-32.</li>
+      <li>Encode numbers to IEEE-754 half, single, and double precision format.</li>
+      <li>Supports real-time encoding.</li>
+      <li>Change the endianness of a multi-byte encoding.</li>
+      <li>Provides user-friendly interface for exploring encodings.</li>
+      <li>Switch to light, dark, or system mode.</li>
+    </ul>
   </description>
 
   <developer id="tld.vendor">
@@ -41,7 +49,7 @@
   </screenshots>
 
   <releases>
-    <release version="0.1.0" date="2025-05-30">
+    <release version="0.1.0" date="2025-06-16">
       <description translate="no">
         <p>Release description</p>
         <ul>
