--- a/data/io.github.josephmawa.EncodingExplorer.desktop.in
+++ b/data/io.github.josephmawa.EncodingExplorer.desktop.in
@@ -4,7 +4,8 @@ Exec=io.github.josephmawa.EncodingExplorer
 Icon=io.github.josephmawa.EncodingExplorer
 Terminal=false
 Type=Application
-Categories=Utility;
-Keywords=GTK;
+Categories=GTK;GNOME;Education;Development;
+# Translators: These are search terms to find this application. Do NOT translate or localize the semicolons. The list MUST also end with a semicolon.
+Keywords=Learn;Character;Number;Text;Binary;Encoding;Encoder;ASCII;UTF-8;UTF-16;UTF-32;
 StartupNotify=true
 DBusActivatable=true
