fix: change brand color

--- a/data/io.github.josephmawa.EncodingExplorer.metainfo.xml.in
+++ b/data/io.github.josephmawa.EncodingExplorer.metainfo.xml.in
@@ -34,7 +34,7 @@
 
   <branding>
     <color type="primary" scheme_preference="light">#a8c9e6</color>
-    <color type="primary" scheme_preference="dark">#0a3d74</color>
+    <color type="primary" scheme_preference="dark">#1a4e85</color>
   </branding>
 
   <screenshots>
